# WeatherService-MCP

weather_service_app/: README.md  pyproject.toml
weather_service_app/src/weather_service_app/: config.py  data_request.py  mcp_client.py  mcp_server.py
